fixed horizontal scrollbar issue

--- a/css/index.css
+++ b/css/index.css
@@ -168,8 +168,10 @@ a {
   color: #FFFFFF;
   text-decoration: none;
 }
-nav {
+body {
   width: 80%;
+}
+nav {
   display: flex;
   justify-content: space-between;
   margin-left: 8%;
@@ -260,6 +262,8 @@ nav h1 .highlight {
   justify-content: space-evenly;
   align-content: center;
   background-color: #2F2D2D;
+  width: 80%;
+  margin: 0 10% 0 10%;
 }
 .footer h1 {
   color: #07FE20;
@@ -581,6 +585,10 @@ nav h1 .highlight {
 .container h2 {
   color: #07FE20;
   margin: 2% 10% 2%;
+}
+.container header {
+  width: 80%;
+  margin-left: 8%;
 }
 .meet-team {
   display: flex;
