--- a/less/about-page.less
+++ b/less/about-page.less
@@ -3,6 +3,11 @@
         color: @supergreen;
         margin: 2% 10% 2%;
     }
+
+    header {
+        width: 80%;
+        margin-left: 8%;
+    }
 }
 
 .meet-team {
