--- a/less/footer.less
+++ b/less/footer.less
@@ -4,6 +4,8 @@
     justify-content: space-evenly;
     align-content: center;
     background-color: @secondary-bg;
+    width: 80%;
+    margin: 0 10% 0 10%;
 
     h1 {
         color: @supergreen;
