--- a/less/global.less
+++ b/less/global.less
@@ -44,3 +44,7 @@
       color: @white;
       text-decoration: none;
   }
+
+  body {
+    width: 80%;
+  }
