--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,4 @@
 nav {
-    width: 80%;
     display: flex;
     justify-content: space-between;
     margin-left: 8%;
